# Psyker

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES_v0.1.0.md  TODO.md  psyker.spec  psyker_frozen_entry.py  psyker_gui.spec  psyker_gui_frozen_entry.py  pyproject.toml  requirements-lsp.txt  run-psyker-extension.ps1
Grammar Context/: README.md
docs/: README.md
installer/: Psyker.iss
md contexts/: AGENTS.md  AUDIT.md  AUDIT_UNUSED_REDUNDANT_2026.md  AUTONOMOUS_DEV_PLAN.md  CI_CHECKLIST.md  CODEX_AUDIT_FS_OPEN_AFTER_CREATE.md  CODEX_EXE_PLAN.md  CODEX_INSTALLER_WIZARD_FEASIBILITY.md  CODEX_PHASE2_VSCODE.md  CODEX_PHASE4_SPEC_ALIGNMENT_CI.md  CODEX_PHASES_AND_STRUCTURE.md  CODEX_PSYKER_ASCII_BANNER_BRIEF.md  CODEX_PSYKER_TEST_FILES_BRIEF.md  CODEX_STEP6_CLI.md  CODEX_V01_RELEASE_BRIEF.md  CODEX_VSCODE_USABILITY_PLAN.md  PSYKER_AI_AGENT_BRIEF.md  PSYKER_CLI_SPEC.md  PSYKER_ERRORS.md  PSYKER_FILE_FORMATS.md  PSYKER_GRAMMAR.md  PSYKER_LANGUAGE_SPEC.md  PSYKER_PERMISSIONS.md  PSYKER_RUNTIME_MODEL.md  PSYKER_SANDBOX.md  PSYKER_VSCODE_EXTENSION_PLAN.md  PULL_REQUEST_TEMPLATE.md  RELEASE_V01_AUDIT.md  V01_READINESS_PLAN.md
scripts/: build_exe.ps1  build_installer.ps1
test_tasks/: agent_alpha.psya  create_file.psy  task_full.psy  task_read.psy  worker_all_caps.psyw
tests/: test_phase2_exe_entry.py  test_phaseA_diagnostics.py  test_phaseB_lsp_features.py  test_phaseC_navigation.py  test_step1_lexer.py  test_step2_parser.py  test_step3_runtime_load.py  test_step4_sandbox.py  test_step5_executor.py  test_step6_cli.py  test_update_check.py
vscode-extension/: INSTALL.md  (+5 more)
(+49 files in other folders)
