[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "psyker"
version = "0.1.0"
description = "PSYKER v0.1 runtime and CLI"
requires-python = ">=3.10"
dependencies = ["prompt_toolkit"]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[project.scripts]
psyker = "psyker.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
